server/webapp/WEB-INF/rails/webpack/views/pages/config_repos/index.scss
/*
 * Copyright 2018 ThoughtWorks, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
@import "../../global/common";

$in-progress-icon-color: #f00;

@mixin header-icon($type, $color) {
  @include icon-before($type: $type, $color: $color, $size: 25px, $margin: 0) {
    text-align: center;
  }
  display: block;
}

.good-last-parse-icon {
  @include header-icon($type: $fa-var-check, $color: $success-txt);
}

.last-parse-error-icon {
  @include header-icon($type: $fa-var-exclamation, $color: $warning-txt);
}

.never-parsed {
  @include header-icon($type: $fa-var-exclamation, $color: $go-danger);
}

.missing-plugin-icon {
  @include header-icon($type: $fa-var-question, $color: $icon-light-color);
}

@mixin key-pair-icon($type, $color) {
  @include icon-after($type: $type, $color: $color, $size: 15px, $margin: 0) {
    display: inline;
  }
}

.good-modification-icon {
  @include key-pair-icon($type: $fa-var-check, $color: $success-txt);
}

.error-last-modification-icon {
  @include key-pair-icon($type: $fa-var-remove, $color: $failed);
}

.last-revision {
  margin: 0 0 10px;
  display: inline-block;
  border: 1px solid $line-color;
  background: $secondary-bg;
  padding: 5px 10px;
  border-radius: $global-border-radius;
}

.lastRevisionValue {
  font-weight: 600;
}

.status-icon {
  margin:     0 20px 0 0;
  width:      25px;
  text-align: center;
}

code {
  white-space: pre-wrap;
  word-break:  break-all;
  word-wrap:   break-word;
}

.spinner-wrapper {
  @include spinner-for-modal;
}

.test-connection-result {
  margin-top: -10px;
  margin-left: 15px;
  min-height: 10px;
}

.test-connection-button-wrapper {
  margin-left: 15px;
  width: 100%;
}

.plugin-file-pattern-config-wrapper {
  margin-top: 20px;
}

@mixin test-connection-button-icon($type, $colors: $icon-light-color, $size: 5px) {
  @include icon-before($type: $type, $color: $colors, $size: 15px, $margin: 0) {
    display: inline-block;
    margin-right: $size;
    @content
  }
  font-size: 11px;
}

.test-connection-success {
  @include test-connection-button-icon($type: $fa-var-check);
}

.test-connection-failure {
  @include test-connection-button-icon($type:
                                         $fa-var-exclamation);
}

.test-connection-in-progress {
  @include test-connection-button-icon($type: $fa-var-spinner) {
    animation: rotate 0.8s linear infinite;
  }

  @keyframes rotate {
    from {
      transform: rotate(0deg);
    }

    to {
      transform: rotate(359deg);
    }
  }
}

.config-repo-update-in-progress {
  @include test-connection-button-icon($type: $fa-var-spinner, $colors: $icon-color, $size: 15px) {
    animation: rotate 0.8s linear infinite;
  }

  @keyframes rotate {
    from {
      transform: rotate(0deg);
    }

    to {
      transform: rotate(359deg);
    }
  }
}

.material-config-wrapper {
  border-bottom: 1px solid $border-color;
}

.key-value-title {
  margin-left: 5px;
}

.header-title-text {
  font-size: 12px;
}

.error-in-parse-info {
  color: $failed;
}

.wrapper-for-search-box {
  display: inline-block;
  margin-right: 10px;
}

.collapse-panel-header {
  border-top: 1px solid $failed;
}

